--- a/UrlShortener/UrlShortener.csproj
+++ b/UrlShortener/UrlShortener.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.Core" Version="3.7.300.20" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.300.20" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.300" />
+    <PackageReference Include="Nanoid" Version="3.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
