--- a/src/UrlShortener/appsettings.Development.json
+++ b/src/UrlShortener/appsettings.Development.json
@@ -8,5 +8,8 @@
   "DynamoDb": {
     "LocalMode": true,
     "LocalServiceUrl": "http://localhost:8000"
+  },
+  "ConnectionStrings": {
+    "Redis": "localhost:6379, abortConnect=false"
   }
 }
