--- a/src/UrlShortener/UrlShortener.csproj
+++ b/src/UrlShortener/UrlShortener.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="AWSSDK.Core" Version="3.7.300.20" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.300.20" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.300" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.0" />
     <PackageReference Include="Nanoid" Version="3.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
