--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,22 @@
 services:
+  app:
+    image: leuisken/url-shortening-service
+    build:
+      context: .
+      dockerfile: docker/app/Dockerfile
+    ports:
+      - "8080:8080"
+    environment:
+      - "DynamoDb:LocalMode=true"
+      - "DynamoDb:LocalServiceUrl=http://dynamodb:8000"
+      - "ConnectionStrings:Redis=redis:6379, abortConnect=false"
+      # @TODO add your aws credentials here or using other ways for auth
+      - "AWS_ACCESS_KEY_ID=********************"
+      - "AWS_SECRET_ACCESS_KEY=****************************************"
+    depends_on:
+      - dynamodb
+      - redis
+
   dynamodb:
     image: amazon/dynamodb-local
     ports:
@@ -6,6 +24,7 @@ services:
     volumes:
       - ./dynamodb:/data
     command: "-jar DynamoDBLocal.jar -sharedDb -dbPath /data"
+
   redis:
     image: redis:7.2.3
     ports:
